feat: add CORS configuration support and update application properties for local development.
Signed-off-by: Tyler Wade <vaxonreal@gmail.com>